début adressage IP

--- a/config/eleve/_toc.yml
+++ b/config/eleve/_toc.yml
@@ -95,6 +95,7 @@ parts:
   - file: content/theme/reseaux/accueil/eleve
     sections:
       - file: content/theme/reseaux/cours/structure
+      - file: content/theme/reseaux/cours/adressage/eleve
 
 ## Annexes
 - caption: Annexes
