--- a/config/eleve/_toc.yml
+++ b/config/eleve/_toc.yml
@@ -96,7 +96,7 @@ parts:
     sections:
       - file: content/theme/reseaux/cours/structure
       - file: content/theme/reseaux/cours/adressage/eleve
-
+      - file: content/theme/reseaux/cours/routage/eleve
 ## Annexes
 - caption: Annexes
   numbered: false
