--- a/config/enseigner/_toc.yml
+++ b/config/enseigner/_toc.yml
@@ -20,6 +20,7 @@ parts:
         sections:
           - file: content/ens/theme/rep-info/activ/entiers/magie-binaire/magie_binaire
           - file: content/ens/theme/rep-info/activ/images/EncoderImages/EncoderImages
+          - file: content/ens/theme/rep-info/activ/images/format-BMP/format-BMP.md
 
   - file: content/ens/theme/prog1/maitre
     sections:
