--- a/config/eleve/_toc.yml
+++ b/config/eleve/_toc.yml
@@ -98,6 +98,7 @@ parts:
       - file: content/theme/reseaux/cours/adressage/eleve
       - file: content/theme/reseaux/cours/routage/eleve
       - file: content/theme/reseaux/cours/tcp-ip/eleve
+      - file: content/theme/reseaux/cours/web/eleve
 ## Annexes
 - caption: Annexes
   numbered: false
